bat.bool1.icyhot.IcyHot.scala.error
Compilation error:
IcyHot:4: error: ';' expected but ']' found.
  else{return false]}
                   ^